--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Startup</title>
+<head>
+  <title>Layout Master</title>
+  <link rel="stylesheet" type="text/css" href="./style.css">
+</head>
+<body>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-
-  <body>
-    <div class="container d-flex align-items-center h-100">
-      <div class="row">
-        <header class="text-center col-12">
-          <h1 class="text-uppercase"><strong>the biggest event of the year</strong></h1>
-        </header>
-        <div class="buffer col-12"></div>
-        <section class="text-center col-12">
-          <hr>
-          <a href="https://mailchi.mp/8c6876718e4d/lecroesy"><button class="btn btn btn-outline-success btn-lg">Find out more</button>
-          </a>
-        </section>  
-      </div>
-    </div>
+	<nav class="zone green">
+		<ul class="main-nav">			
+			<li><a href="">About</a></li>	
+			<li><a href="">Products</a></li>
+			<li><a href="">Our Team</a></li>
+			<li class="push"><a href="">Contact</a></li>			
+		</ul>
+	</nav>
 
 
-  </body>
+	<div class="container zone red">Cover!!!!</div>
+
+	<div class="zone blue grid-wrapper">	
+		<div class="box zone">	<img src="./img/files_2.png"></div>
+		<div class="box zone">	<img src="./img/server_2_2.png"></div>
+		<div class="box zone">	<img src="./img/monitor_settings_2.png"></div>
+		<div class="box zone">	<img src="./img/server_3.png"></div>
+		<div class="box zone">	<img src="./img/data_storage_2_2.png"></div>
+		<div class="box zone">	<img src="./img/monitor_coding_2.png"></div>
+		<div class="box zone">	<img src="./img/desktop_analytics_2.png"></div>
+		<div class="box zone">	<img src="./img/server_safe_2.png"></div>
+	</div>
+
+
+	<footer class="zone yellow">Zero to mastery</footer>
+</body>
 </html>
