--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<nav class="zone green">
+	<nav class="zone green sticky">
 		<ul class="main-nav">			
 			<li><a href="">About</a></li>	
 			<li><a href="">Products</a></li>
@@ -16,7 +16,7 @@
 	</nav>
 
 
-	<div class="container zone red">Cover!!!!</div>
+	<div class="container zone"><img class="cover" src="./img/sit.png"></div>
 
 	<div class="zone blue grid-wrapper">	
 		<div class="box zone">	<img src="./img/files_2.png"></div>
