--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-	<nav class="zone green sticky">
+	<nav class="zone blue sticky">
 		<ul class="main-nav">			
 			<li><a href="">About</a></li>	
 			<li><a href="">Products</a></li>
